config-root/namespaces/mydev/h52/h52-svc.yaml
# Source: h52/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h52
  annotations:
    meta.helm.sh/release-name: 'h52'
  namespace: mydev
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: h52-h52
