config-root/namespaces/mydev/h52/h52-ingress.yaml
# Source: h52/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    meta.helm.sh/release-name: 'h52'
  name: h52
  namespace: mydev
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: h52
            port:
              number: 8080
        path: /
    host: h52-mydev.saas-ops.finline.app
  tls:
  - hosts:
    - h52-mydev.saas-ops.finline.app
    secretName: "jx-privkey"
